# WGPU-by-Examples

./: Cargo.toml  README.md
examples/ch01/: common.rs  line_msaa.rs  triangle-primitive.wgsl  triangle-vertex-color.wgsl  triangle_gpu_buffer.rs  triangle_primitive.rs  triangle_vertex_color.rs  triangle_wgpu_buffer.wgsl  wgpu_info.rs
src/: lib.rs  transforms.rs  wgpu_simplified.rs
