[package]
name = "wgpu_book_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17.1"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.28"
anyhow = "1.0"

[[example]]
name = "ch01_wgpu_info"
path = "examples/ch01/wgpu_info.rs"

[[example]]
name = "ch01_triangle_vertex_color"
path = "examples/ch01/triangle_vertex_color.rs"
